
#pragma once

#include <cstdint>
#include <string>

#include "core/GlobalHeader.h"
#include "core/Port.h"
#include "core/Link.h"

#pragma warning(push)
#pragma warning(disable: 4100) 


namespace e3 {

    class Module;
    class Outport;
    class Polyphony;

    // Pointer type to the audio processing function of a module.
    typedef void (Module::*ProcessFunctionPointer)(void) throw();

    enum ModuleType {
        ModuleTypeUndefined        = -1,
        
        // system modules
        ModuleTypeAudioOutTerminal = 0,
        ModuleTypeMidiGate         = 1,
        ModuleTypeMidiPitch        = 2,
        ModuleTypeMidiInput        = 3,
        
        // audio
        ModuleTypeSineOscillator   = 10,
        ModuleTypeAdsrEnvelope     = 11,
        ModuleTypeDelay            = 12,
    };


    enum ProcessingType
    {
        ProcessEvent   = 1,
        ProcessControl = 2,
        ProcessAudio   = 4
    };

    enum VoicingType
    {
        Monophonic = 0,
        Polyphonic = 1
    };

    enum ModuleStyle
    {
        ModuleStyleNothing = 0,
        ModuleStyleVisible = 1,
        ModuleStyleLabel   = 2
    };

    
    //--------------------------------------------------------------------------
    // class Module
    // Abstract base class for Modules.
    //--------------------------------------------------------------------------

    class Module
    {
        friend class Instrument;
        friend class Sink;

    protected:
        Module(
            ModuleType moduleType,
            const std::string& label,
            VoicingType voicingType,
            ProcessingType processingType,
            ModuleStyle style = (ModuleStyle)(ModuleStyleVisible | ModuleStyleLabel));

    public:
        virtual ~Module();

        void processAudio() throw() {}
        virtual void processEvent(double value, uint16_t voices) throw() {}
        virtual void processControl() throw () {}

        virtual void onMidiController( int controllerNum, int value );

        virtual void suspend() {}
        virtual void resume() {}

        virtual void setSampleRate(double sampleRate);
        virtual void setNumVoices(uint16_t numVoices);

        virtual void setParameter(int paramId, double value, double modulation = 0.f, int16_t voice = -1) {}
        const Parameter& getParameter(int parameterId) const;

        int getNumParameters() const                 { return parameters_.size(); }
        const ParameterMap& getParameters() const    { return parameters_; }
        void updateParameter( const Parameter& p )   { parameters_.update( p ); }
        void setDefaultParameters()                  { parameters_.setDefaultValues(); }

        const InportList& getInports() const         { return inports_; }
        const OutportList& getOutports() const       { return outports_; }

        int getNumInports() const                    { return inports_.size(); }
        int getNumOutports() const                   { return outports_.size(); }
        
        Inport* getInport(int portId) const;
        Outport* getOutport(int portId) const;
        AudioOutport* getAudioOutport(int portId) const;
        AudioInport* getAudioInport(int portId) const;
        EventOutport* getEventOutport(int portId) const;
        EventInport* getEventInport(int portId) const;

        int getId() const                           { return id_; }
        void setId( int id )                        { id_ = id; }
        const std::string& getLabel() const         { return label_; }
        void setLabel( const std::string& label )   { label_ = label; }
        VoicingType getVoicingType() const          { return voicingType_; }
        void setVoicingType( VoicingType type )       { voicingType_ = type; }

        const ModuleType moduleType_;
        const ProcessingType processingType_;
        const ModuleStyle style_;

    protected:
        std::string label_;
        int id_ = -1;
        VoicingType voicingType_;

        ParameterMap parameters_;
        InportList inports_;
        OutportList outports_;

        ProcessFunctionPointer processFunction_ = nullptr;

        // Constructs all member and initializes them with the current sample rate and number of voices.
        // No links are created.
        virtual void init(Polyphony* polyphony, double sampleRate);

        // Updates all members with the current sample rate and number of voices.
        // Links remain valid.
        virtual void update();

        // Deletes all members and links. After reset the module is in the same state as before init().
        virtual void reset();

        virtual void connectSignals() {}
        virtual void initVoices() {}
        virtual void initParameters();

        virtual void disconnectSignals() {}
        virtual void disconnectPorts();
        virtual void resetData()  {}
        virtual void resetParameters()  {}

        virtual void updatePorts();
        virtual void updateInports();
        virtual void updateOutports();
        virtual void updateParameters();

        void addInport(int id, const std::string& label, Inport* port);
        void addOutport(int id, const std::string& label, Outport* port);
        void connectPort(Module* target, Link* link);
        VoiceAdapterType selectVoiceAdapter(VoicingType other) const;

        double sampleRate_   = INITIAL_SAMPLERATE;
        uint16_t numVoices_  = 0;
        bool mono_           = false;

        Polyphony* polyphony_ = nullptr;

    private: // Make non copyable and prevent C4512
        Module( const Module& ) = delete;
        Module& operator=(const Module&) = delete;
    };

    typedef std::vector<Module*> ModuleList;

} // namespace e3

#pragma warning(pop)
